# AI-Navigator

./: README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
ai-navigator-frontend/: .env  package-lock.json  package.json  tsconfig.app.json
ai-navigator-frontend/src/components/: ReportManagement.tsx  SubscriptionPreferences.tsx
ai-navigator-frontend/src/components/data-sources/: CategorySelector.tsx
ai-navigator-frontend/src/components/preferences/: PreferenceSettings.tsx
ai-navigator-frontend/src/types/: api.ts
ai-navigator/backend/: .env  Dockerfile  fly.toml  pyproject.toml  test_db.py
ai-navigator/backend/app/core/: config.py
ai-navigator/backend/app/db/: base.py  base_class.py  init_db.py
ai-navigator/backend/app/models/: __init__.py  base.py  models.py
ai-navigator/backend/app/schemas/: data_source.py
ai-navigator/backend/app/services/: data_source.py  notification.py  scheduler.py
ai-navigator/backend/tests/: conftest.py  test_data_sources.py  test_user_preferences.py
backend/app/models/: models.py
backend/app/services/: data_source.py  notification.py  scheduler.py
backend/tests/: test_user_preferences.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/data-sources/: CategorySelector.tsx
frontend/src/components/preferences/: PreferenceSettings.tsx
