[tool.poetry]
name = "ai-navigator-backend"
version = "0.1.0"
description = "Backend for AI Navigator system"
authors = ["Devin <devin@ai.dev>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"
jinja2 = "^3.1.2"
aiosmtplib = "^3.0.1"
apscheduler = "^3.10.4"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
mypy = "^1.7.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
    "ignore::RuntimeWarning:asyncio.*:",
    "ignore::DeprecationWarning:pytest_asyncio.*:"
]
